--- a/login-page/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/login-page/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -5,10 +5,10 @@ main {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100;
+    height: 100%;
 
     section {
-        height: 100;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -66,6 +66,10 @@ main {
             padding: 12px 24px;
             margin: 35px 0 35px 0;
             cursor: pointer;
+
+            &:disabled{
+                opacity: 0.5;
+            }
 
             &.btn-primary {
                 background-color: $primary-color;
